--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+html {
+  font-family: 'Open Sans', sans-serif;
+}
 body {
-font-family: 'Open Sans', sans-serif;
+  background-color: #990000;
+  color: #FFCC00;
 }
